Add and Update location using dialog

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 @import url(base/vars.css);
+@import url(cmps/dialog.css);
 @import url(base/base.css);
 @import url(cmps/user-msg.css);
 @import url(cmps/locs.css);
